# agentic_systematic_review

./: .env  .env.example  .gitignore  README.md  agents.py  config.py  embedding_manager.py  excel_handler.py  feature_extractor.py  fields_config.yaml  llm_client.py  main.py  pdf_processor.py  progress_tracker.py  pyproject.toml  requirements.txt  utils.py  yaml_handler.py
agents/: exporter.py  ingest.py  verifier.py
data/: results.xlsx
local_agent_sr/: README.md  requirements.txt
local_agent_sr/configs/: data_extraction.yaml  inclusion_criteria.yaml
pdf-feature-extractor/: config.py  embedding_manager.py  excel_handler.py  llm_client.py  main.py  pdf_processor.py  requirements.txt
pdf-feature-extractor/data/: features.xlsx
pdf-feature-extractor/tests/: test_feature_extractor.py  test_integration.py
schemas/: config_schemas.py
src/: cli.py
src/agents/: extractor.py  screener.py
src/io/: chunking.py  parsers.py
src/prompts/: extraction_prompts.py  screening_prompts.py
src/schemas/: output_schemas.py
tests/: sample_features.csv  test_llm_client.py  test_pdf_processor.py
